--- a/src/Views/SignUp.css
+++ b/src/Views/SignUp.css
@@ -1,14 +1,12 @@
 /* Sign in screens styles */
 .app-logo {
-    width: 264px;
-    height: 50px;
-    margin-top: 150px;
+    height: 275px;
+    margin-top: 50px;
+    margin-bottom: 0;
   }
   
   .heading {
-    margin-top: 40px;
-    margin-bottom: 0px;
-  
+    margin-top: 20px;
     font-weight: 500;
   }
   
@@ -20,7 +18,7 @@
   }
   
   .phone-input-container {
-    margin-top: 40px;
+    margin-top: 20px;
   }
   
   .extra-info {
@@ -43,10 +41,10 @@
     width: 224px;
     height: 36px;
   
-    background: #f7b348;
+    background: #4eb1bc;
     border-radius: 100px;
     border: none;
-    margin-top: 90px;
+    margin-top: 50px;
   
     color: white;
   
